fixed spacing and added api pic

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,12 +21,14 @@ body{
 }
 
 h2{
+  padding-top:10px;
   font-size: 1.8em;
   margin: 10px;
 }
 h3{
+  padding-top:10px;
   font-size: 1.6em;
-  margin: 40px; 
+  margin: 10px; 
   color: $white;  
 }
 p{
